# cs5222-lab-prefetcher

./: .clang-format  .gitignore  CMakeLists.txt  make_csv.sh  percentages.csv  results.csv  run_all.sh
example_prefetchers/: CMakeLists.txt
inc/: prefetcher.h
output/: ampm-lite;GemsFDTD  ampm-lite;gcc  ampm-lite;lbm  ampm-lite;leslie3d  ampm-lite;libquantum  ampm-lite;mcf  ampm-lite;milc  ampm-lite;omnetpp  ghb-pc-dc;GemsFDTD  ghb-pc-dc;gcc  ghb-pc-dc;lbm  ghb-pc-dc;leslie3d  ghb-pc-dc;libquantum  ghb-pc-dc;mcf  ghb-pc-dc;milc  ghb-pc-dc;omnetpp  ip-stride;GemsFDTD  ip-stride;gcc  ip-stride;lbm  ip-stride;leslie3d  ip-stride;libquantum  ip-stride;mcf  ip-stride;milc  ip-stride;omnetpp  next-line;GemsFDTD  next-line;gcc  next-line;lbm  next-line;leslie3d  next-line;libquantum  next-line;mcf  next-line;milc  next-line;omnetpp  skeleton;GemsFDTD  skeleton;gcc  skeleton;lbm  skeleton;leslie3d  skeleton;libquantum  skeleton;mcf  skeleton;milc  skeleton;omnetpp  (+8 more)
report/: CS5222-Project-3.bib  CS5222_A3_A0189906L_Report.tex
report/figures/: ipc_relative.tikz
src/: CMakeLists.txt  ghb_pc_dc.cc  ghb_pc_dc.h  history_buffer.cc  history_buffer.h  lru_cache.h
